layout_search-bar-airbnb shift fixed

--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,21 @@
 @font-face {
-  font-family: "Avenir-Book", sans-serif;
-  src: url("fonts/Avenir-Book.ttf") format("truetype");
+  font-family: "Avenir";
+  src: url("./fonts/Avenir-Book.ttf") format("truetype");
   font-weight: 300;
 }
 
 @font-face {
-  font-family: "Avenir-Heavy", sans-serif;
-  src: url("fonts/Avenir-Heavy.ttf") format("truetype");
-  font-weight: 300;
+  font-family: "Avenir";
+  src: url("./fonts/Avenir-Heavy.ttf") format("truetype");
+  font-weight: bold;
 }
 
 * {
   box-sizing: border-box;
+}
+
+html {
+  font-family: Avenir, sans-serif;
 }
   
 .search-form {
@@ -27,15 +31,13 @@
   
 .input {
   position: relative;
-  padding: 20px 60px;
+  padding: 20px 62px;
   border: none;
   border-radius: 4px;
   display: inline-block;
   width: 100%;
   height: 100%;
-  font-family: "Avenir-Book", sans-serif;
-  line-height: 22px;
-  letter-spacing: 0.6px;
+  font-family: inherit;
   font-size: 16px;
 }
 
@@ -45,41 +47,31 @@
   
 .input-small {
   padding-left: 33px;
-  font-family: "Avenir-Book", sans-serif;
-  line-height: 20px;
+  font-family: inherit;
   font-size: 14px;
 }
 
 .input::placeholder {
-  font-size: 16px;
   color: #3d4e61;
-}
-
-.input-small::placeholder {
-  font-size: 14px;
 }
 
 .search-form::after {
   content: "";
   background-image: url(images/Search.svg);
-  background-size: 19px;
-  display: inline-block;
-  position: absolute;
-  left: 26px;
-  top: calc(50% - 11px);
-  text-align: center;
-  line-height: 22px;
-  width: 19px;
   height: 19px;
+  width: 19px;
+  top: calc(50% - 10px);
+  left: 25px;
+  position: absolute;
+  display: flex;
 }
   
 .search-form-small::after {
-  position: absolute;
   background-size: 11px;
-  top: calc(50% - 6px);
+  top: calc(50% - 5px);
   height: 11px;
   width: 11px;
-  left: 13px;
+  left: 14px;
 }
 
 .input:hover {
@@ -88,7 +80,7 @@
 
 .input:focus {
   background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
-  font-weight: 900;
+  font-weight: 700;
   color: #3d4e61;
-  font-family: "Avenir-Book", sans-serif;
+  font-family: inherit;
 }
